--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "@azure/msal-node": "^1.17.0",
     "@vtfk/azure-blob-client": "^0.1.3",
     "@vtfk/logger": "^4.3.2",
+    "@vtfk/sharepoint-rest-auth": "^1.0.1",
     "axios": "^1.3.4",
-    "xml2js": "^0.4.23"
+    "node-cache": "^5.1.2",
+    "xml2js": "^0.5.0"
   },
   "devDependencies": {
     "azure-functions-core-tools": "^4.x"
