small fixes and jest / tests

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Handles forms from Acos",
   "scripts": {
     "start": "func start",
-    "test": "echo \"No tests yet...\""
+    "test": "standard && jest --verbose"
   },
   "dependencies": {
     "@azure/msal-node": "^1.17.0",
@@ -16,6 +16,14 @@
     "xml2js": "^0.5.0"
   },
   "devDependencies": {
-    "azure-functions-core-tools": "^4.x"
+    "@types/jest": "^29.5.1",
+    "azure-functions-core-tools": "^4.x",
+    "jest": "^29.5.0",
+    "standard": "^17.0.0"
+  },
+  "standard": {
+    "env": [
+      "jest"
+    ]
   }
 }
