--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vtfk/logger": "^4.3.2",
     "@vtfk/sharepoint-rest-auth": "^1.0.1",
     "axios": "^1.3.4",
+    "dotenv": "^16.3.1",
     "node-cache": "^5.1.2",
     "xml2js": "^0.5.0"
   },
